# warehouse-management-system

./: .gitignore  AGENTS.md  BRAINSTORM_bin_archival.md  INITIAL2.md  INITIAL3.md  INITIAL4.md  INITIAL5.md  INITIAL6.md  LICENSE  PHASE1_STOCK_LEVELS_ENHANCEMENTS.md  PLANNING.md  PLAN_bin_archival.md  README.md  SPRINT4_TEMPLATE_AWARE_SINGLE_BIN.md  TASK.md  TEMPLATE_AWARE_BULK_CREATION_PLAN.md  TEMPLATE_AWARE_BULK_CREATION_SPRINT2_COMPLETE.md  WAREHOUSE_BIN_INTEGRATION_PLAN.md  WAREHOUSE_BIN_INTEGRATION_SPRINT1_COMPLETE.md  phase5-diff.txt  phase5-pr-description.md
w7-WHv1/backend/: Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements.txt  test_dashboard_api.py
w7-WHv1/backend/alembic/: env.py
w7-WHv1/backend/alembic/versions/: 20251221_021531_686c3bcd48eb_initial_schema.py  20251221_074407_fb475d91443e_phase3_inventory_movements.py  20251221_133711_60db610701fc_allow_zero_quantity_for_bin_contents.py  20251221_142327_202af48e6f7e_phase4_transfers_reservations_jobs.py  20251229_043620_a8f4279715a7_add_bin_content_receipt_fields.py  20251229_180833_1b186ead5457_add_bin_archival_fields.py
w7-WHv1/backend/app/: __init__.py  main.py
w7-WHv1/backend/app/api/: __init__.py  deps.py
w7-WHv1/backend/app/core/: __init__.py  config.py  i18n.py  logging_config.py  metrics.py  rate_limit.py  security.py
w7-WHv1/backend/app/db/: __init__.py  base.py  seed.py  session.py
w7-WHv1/backend/app/schemas/: __init__.py  auth.py  bin.py  dashboard.py  expiry.py  inventory.py  jobs.py  movement.py  product.py  reservation.py  supplier.py  transfer.py  (+2 more)
(+311 files in other folders)
